@startuml
!theme plain
hide circle
skinparam linetype ortho

entity "tickets" {
    *id : BIGINT <<PK>>
    --
    order_id : BIGINT
    event_id : BIGINT
    user_id : VARCHAR(255)
    seat_id : BIGINT
    seat_label: VARCHAR(255)
    ticket_code : VARCHAR(255)
    attendee_name : VARCHAR(255)
    attendee_email : VARCHAR(255)
    status : VARCHAR(50)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "check_in_logs" {
    *id : BIGINT <<PK>>
    --
    ticket_id : BIGINT <<FK>>
    event_id : BIGINT
    user_id : VARCHAR(255)
    check_in_time : DATETIME
    gate : VARCHAR(100)
    device_id : VARCHAR(100)
}

entity "ticket_transfers" {
    *id : BINARY(16) <<PK>>
    --
    ticket_id : BIGINT <<FK>>
    sender_id : VARCHAR(255)
    recipient_email : VARCHAR(255)
    status : VARCHAR(50)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "marketplace_listings" {
    *id : BINARY(16) <<PK>>
    --
    ticket_id : BIGINT <<FK>>
    seller_id : VARCHAR(255)
    price : DECIMAL(10,2)
    status : VARCHAR(50)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

tickets ||..o{ check_in_logs
tickets ||..o{ ticket_transfers
tickets ||..o{ marketplace_listings
@enduml
